Update to dotenv package Change to using process.env for database connection parameters Add error and success messages for registration and login
This commit updates the dotenv package to version 16.4.5 and uses process.env to set the database connection parameters. It also adds error and success messages for registration and login.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,3 +14,13 @@ body {
   color: #fff;
   background-color: #000;
 }
+
+.error{
+  color: red;
+  margin-left: 1rem;
+}
+
+.success{
+  color: green;
+  margin-left: 1rem;
+}
