--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -1,13 +1,14 @@
 <%- include('partials/header') %>
 
-  <div class="jumbotron text-center">
-    <div class="container">
-      <i class="fas fa-key fa-6x"></i>
-      <h1 class="display-3">You've Discovered My Secret!</h1>
-      <p class="secret-text">Jack Bauer is my hero.</p>
-      <hr>
-      <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
-    </div>
+<div class="jumbotron text-center">
+  <div class="container">
+    <i class="fas fa-key fa-6x"></i>
+    <h1 class="display-3">You've Discovered My Secret!</h1>
+    <p class="secret-text"><%= locals.secrets %></p>
+    <hr />
+    <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
+    <a role="button" class="btn btn-lg btn-dark" href="/submit">Submit</a>
   </div>
+</div>
 
-  <%- include('partials/footer') %>
+<%- include('partials/footer') %>
